tests/baselines/reference/higherKindedTypesLift3.errors.txt
tests/cases/compiler/higherKindedTypesLift3.ts(23,35): error TS2345: Argument of type 'string[]' is not assignable to parameter of type 'T[]'.
  Type 'string' is not assignable to type 'T'.
tests/cases/compiler/higherKindedTypesLift3.ts(24,7): error TS2322: Type 'T[]' is not assignable to type 'number[]'.
  Type 'T' is not assignable to type 'number'.


==== tests/cases/compiler/higherKindedTypesLift3.ts (2 errors) ====
    interface StaticFunctor<CS<_TS>> {
        <AS, BS>(csas: CS<AS>, fmapstatic: (a: AS) => BS): CS<BS>;
    }
    
    
    interface LiftedResult<LC<_LT>> {
        <LA, LB>(lmap: (a: LA) => LB): (a: LC<LA>) => LC<LB>;
    }
    
    declare function lift<C<_T>>(fToLift: StaticFunctor<C>): LiftedResult<C>
    
    
    declare const myArrayFunctor: StaticFunctor<Array>
    
    const liftedArray = lift(myArrayFunctor);
    
    declare function stringLength(strarg: string): number
    
    const liftedStringLength = liftedArray(stringLength);
    
    declare const arrayOfStrings: Array<string>;
    
    const result = liftedStringLength(arrayOfStrings);
                                      ~~~~~~~~~~~~~~
!!! error TS2345: Argument of type 'string[]' is not assignable to parameter of type 'T[]'.
!!! error TS2345:   Type 'string' is not assignable to type 'T'.
    const expectedType: Array<number> = result;
          ~~~~~~~~~~~~
!!! error TS2322: Type 'T[]' is not assignable to type 'number[]'.
!!! error TS2322:   Type 'T' is not assignable to type 'number'.
    
    const expectError = liftedStringLength(result)
    
    